--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.9",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "sib-api-v3-sdk": "^7.2.4"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
